// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Boolean Field Test: boolfield 1`] = `
<input
  onChange={[Function]}
  type="checkbox"
/>
`;

exports[`Boolean Field Test: set to false 1`] = `
<input
  checked={false}
  onChange={[Function]}
  type="checkbox"
/>
`;

exports[`Boolean Field Test: set to invalid 1`] = `
<input
  checked="invalid"
  onChange={[Function]}
  type="checkbox"
/>
`;

exports[`Boolean Field Test: set to true 1`] = `
<input
  checked={true}
  onChange={[Function]}
  type="checkbox"
/>
`;
